Fixed this: - Creation of an entity type: there is a lack of space between "Pflichtfeld" and other restrictions (screenshot 1a, but it applies to the other fields as well)... In addition, I am asking myself, what is actually the semantics of mandatory field in this case? For instance, the name of role is shown as mandatory, however, in ERM it is not. Indeed, if one is not providing it, the relation is still created (screenshot 1b). If editing of all elements would work fine (see comments below), I would say that the only obligatory field should be the name of an entity, the name of the relation, and all fields in case of g/s. - If one is making some mistake, e.g., including spaces in the name of entity type, one is not getting any warning and entity type is created anyway? - can attributes inside the entity type be left-aligned? (screenshot 1c) - if one wants to generate the png out of the created diagram, the default name that appears is "FMMLxStudio - 2017-10-16T07-12-15.818Z.png" please change to moodler. - while after creating, I can edit entity types or generalisation/specialisation relation, I am not able to edit a relationship type. - while trying to edit generalisation/specialisation relation the information whether it is total or overlapping is not correctly shown. Even more, independent what one is doing with it, the already created g/s does not change. - if one is editing an entity type (e.g., adding new attributes), while the changes are accounted for, the already defined relations are partly removed (screenshot 1d). As currently the relation type cannot be edited, a user is in not a very good situation and can only delete the relation type... - if one is editing attributes of an entity type, one can delete attributes starting from the second one... If there are at least two attributes defined, there should be a possibility to delete the first attribute as well. - finally, if one is creating an entity type, the created entity type is sometimes placed qui

--- a/css/moodler.css
+++ b/css/moodler.css
@@ -6,8 +6,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
-
-body{
+body {
     margin: 0;
 }
 
@@ -45,26 +44,31 @@ body{
     margin-left: 12px;
 }
 
-#file{
+#file {
     margin-top: 15px;
-    border-bottom: 1px solid ;
+    border-bottom: 1px solid;
     margin-bottom: 20px;
     text-align: center;
     padding-bottom: 10px;
 }
 
-#file i{
+#file i {
     font-size: 18px !important;
-    margin-right:15px;
+    margin-right: 15px;
     display: inline-block;
 }
 
-#menu{
+#menu {
     text-align: center;
     border-right: solid 1px black;
 }
 
-#menu img{
+#menu a {
+    decoration: inherit;
+    color: inherit;
+}
+
+#menu img {
     width: 100px;
     margin-bottom: 20px;
     display: inline-block;
